# ThunderMittens

./: .gitignore  README.md
ThunderMittens/: MetalSingle.hpp  main.cpp
ThunderMittens.xcodeproj/: project.pbxproj
ThunderMittens.xcodeproj/xcshareddata/xcschemes/: ThunderMittens.xcscheme
ThunderMittens.xcodeproj/xcuserdata/connertakehana.xcuserdatad/xcschemes/: xcschememanagement.plist
ThunderMittens/kernels/: CMakeLists.txt  bindings.cpp  setup.py  time_attn.py  time_gemm.py
ThunderMittens/kernels/add_rt/: add_rt.cpp  add_rt.h  add_rt.metal
ThunderMittens/kernels/attn_fwd/: attn_fwd.cpp  attn_fwd.h  attn_fwd.metal
ThunderMittens/kernels/attn_fwd/correctness/: c_attn.m  gentests.py
ThunderMittens/kernels/matmul_custom/: matmul_custom.cpp  matmul_custom.h  matmul_custom.metal
ThunderMittens/kernels/tk/: __init__.py  libmlx_ext.dylib  mlx_ext.metallib
ThunderMittens/tests/unit/: unit_tests.cpp
ThunderMittens/tests/unit/group/: group.cpp  group.hpp
ThunderMittens/tests/unit/group/memory/: memory.cpp  memory.hpp
ThunderMittens/tests/unit/group/memory/tile/: global_to_register.cpp  global_to_register.hpp  global_to_register.metal  global_to_shared.cpp  global_to_shared.hpp  global_to_shared.metal  shared_to_register.cpp  shared_to_register.hpp  shared_to_register.metal  tile.cpp  tile.hpp
ThunderMittens/tests/unit/group/memory/vec/: global_to_register.cpp  global_to_register.hpp  global_to_register.metal  global_to_shared.cpp  global_to_shared.hpp  global_to_shared.metal  shared_to_register.cpp  shared_to_register.hpp  shared_to_register.metal  vec.cpp  vec.hpp
ThunderMittens/tests/unit/group/shared/: shared.cpp  shared.hpp
ThunderMittens/tests/unit/group/shared/tile/: conversions.cpp  conversions.hpp  conversions.metal  maps.cpp  maps.hpp  maps.metal  reductions.cpp  reductions.hpp  reductions.metal  tile.cpp  tile.hpp
ThunderMittens/tests/unit/group/shared/vec/: conversions.cpp  conversions.hpp  conversions.metal  maps.cpp  maps.hpp  maps.metal  vec.cpp  vec.hpp
ThunderMittens/tests/unit/testing_commons/: testing_commons.hpp  testing_flags.hpp  testing_types.hpp  testing_utils.cpp  testing_utils.hpp
ThunderMittens/tests/unit/warp/: warp.cpp  warp.hpp
ThunderMittens/tests/unit/warp/memory/: memory.cpp  memory.hpp
ThunderMittens/tests/unit/warp/register/: register.cpp  register.hpp
ThunderMittens/tests/unit/warp/shared/: shared.cpp  shared.hpp
(+69 files in other folders)
